//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table batch {
  id_batch Int [pk, increment]
  id_order Int [not null]
  batch_key String [unique, not null]
  batch_size Int [not null]
  id_wc_last String
  batch_wc_enter DateTime
  batch_product_itmref String
  batch_product_qty Int
  batch_created DateTime
  batch_comment String
  batch_state_num Int [default: 0]
  batch_lot String
  work_center work_center
  work_order work_order [not null]
  concession_assign concession_assign [not null]
  work_center_stay work_center_stay [not null]

  Note: 'This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments'
}

Table build_instruction {
  id_bi Int [pk, increment]
  id_wc String
  bi_pn String
  bi_type BI_TYPE [not null, default: 'B']
  bi_text String [not null]
  work_center work_center
}

Table concession_assign {
  id_concession_assign Int [pk, increment]
  id_concession Int [not null]
  id_batch Int [not null]
  id_user Int [not null]
  concession_date DateTime [default: `now()`, not null]
  batch batch [not null]
  concession_enum concession_enum [not null]
  user_user user_user [not null]
}

Table concession_enum {
  id_concession Int [pk, increment]
  concession_name String [unique, not null]
  concession_desc String [not null]
  concession_created DateTime [default: `now()`, not null]
  concession_closed DateTime
  concession_disabled Boolean
  concession_assign concession_assign [not null]
}

Table custom_field {
  id_field Int [pk, increment]
  id_wc String
  field_name String [not null]
  field_desc String [not null]
  field_datatype String [not null, default: 'text']
  field_order Int
  work_center work_center
  custom_field_instance custom_field_instance [not null]

  indexes {
    (field_name, id_wc) [unique]
  }
}

Table custom_field_instance {
  id_field_instance Int [pk, increment]
  id_field Int [not null]
  id_order Int [not null]
  field_value String
  custom_field custom_field [not null]
  work_order work_order [not null]
}

Table device {
  id_device Int [pk, increment]
  id_wc String
  device_key String [unique]
  device_name String [not null]
  device_desc String [not null]
  work_center work_center
}

Table entry_assign {
  id_entry_assign Int [pk, increment]
  id_wc String [not null]
  id_entry Int [not null]
  entry_assign_order Int
  entry_assign_mandatory Boolean [not null, default: false]
  entry_enum entry_enum [not null]
  work_center work_center [not null]
  entry_instance entry_instance [not null]
}

Table entry_enum {
  id_entry Int [pk, increment]
  entry_name String [not null]
  entry_key String
  entry_desc String [not null]
  entry_is_error Boolean [not null, default: false]
  entry_datatype String [not null, default: 'text']
  entry_color String
  entry_icon String
  entry_assign entry_assign [not null]
}

Table entry_instance {
  id_entry_inst Int [pk, increment]
  id_entry_assign Int [not null]
  id_wc_stay Int [not null]
  id_user Int [not null]
  entry_value String
  entry_modified DateTime
  entry_inactive Boolean [not null, default: false]
  entry_finalized Boolean [not null, default: false]
  entry_assign entry_assign [not null]
  user_user user_user [not null]
  work_center_stay work_center_stay [not null]
}

Table operation {
  id_operation Int [pk, increment]
  id_wc String [not null]
  id_order Int [not null]
  oper_time Float [not null, default: 0]
  oper_name String
  oper_seq Int [not null]
  work_center work_center [not null]
  work_order work_order [not null]
}

Table permission_assign {
  id_permission_assign Int [pk, increment]
  id_role Int [not null]
  id_permission Int [not null]
  user_permission user_permission [not null]
  user_role user_role [not null]
}

Table role_assign {
  id_role_assign Int [pk, increment]
  id_user Int [not null]
  id_role Int [not null]
  user_role user_role [not null]
  user_user user_user [not null]
}

Table time_tracker {
  id_time Int [pk, increment]
  id_wc_stay Int [not null]
  id_user Int
  time_start DateTime
  time_stop DateTime
  time_interval Int
  time_type Int [not null, default: 0]
  user_user user_user
  work_center_stay work_center_stay [not null]
}

Table user_permission {
  id_permission Int [pk, increment]
  permission_name String [unique, not null]
  permission_desc String [not null, default: '']
  permission_assign permission_assign [not null]
}

Table user_role {
  id_role Int [pk, increment]
  role_name String [unique, not null]
  role_desc String [not null]
  permission_assign permission_assign [not null]
  role_assign role_assign [not null]
}

Table user_user {
  id_user Int [pk, increment]
  user_firstname String [not null]
  user_lastname String [not null]
  user_login String [unique]
  user_ldap Boolean [not null, default: false]
  user_pass String
  user_operator String [unique]
  user_inactive Boolean [not null, default: false]
  user_token String
  concession_assign concession_assign [not null]
  entry_instance entry_instance [not null]
  role_assign role_assign [not null]
  time_tracker time_tracker [not null]
  work_center_stay work_center_stay [not null]
}

Table work_center {
  id_wc String [pk]
  wc_desc String [not null]
  wc_week_hours Float [not null, default: 0]
  wc_idle_timeout Int [not null, default: 0]
  batch batch [not null]
  build_instruction build_instruction [not null]
  custom_field custom_field [not null]
  device device [not null]
  entry_assign entry_assign [not null]
  operation operation [not null]
  work_center_stay work_center_stay [not null]
}

Table work_center_stay {
  id_wc_stay Int [pk, increment]
  id_wc String [not null]
  id_batch Int [not null]
  id_user Int
  wc_start_date DateTime [default: `now()`, not null]
  wc_end_date DateTime
  wc_stay_order Int [not null, default: 1]
  wc_stay_last_stay_on_wc Boolean [default: false]
  wc_stay_finish_qty Int [not null, default: 0]
  entry_instance entry_instance [not null]
  time_tracker time_tracker [not null]
  batch batch [not null]
  work_center work_center [not null]
  user_user user_user

  Note: 'This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments'
}

Table work_order {
  id_order Int [pk, increment]
  wo_number String [unique, not null]
  wo_startdate String
  wo_enddate String
  wo_product String
  wo_quantity Int
  wo_status Int
  wo_x3_last_update DateTime
  wo_comment String
  wo_note_short String
  wo_note_long String
  wo_hold Boolean [not null, default: false]
  wo_keep_ope_seq Boolean [not null, default: false]
  wo_customer String
  batch batch [not null]
  custom_field_instance custom_field_instance [not null]
  operation operation [not null]
}

Enum BI_TYPE {
  B
  I
}

Ref: batch.id_wc_last > work_center.id_wc [delete: No Action]

Ref: batch.id_order > work_order.id_order [delete: No Action]

Ref: build_instruction.id_wc > work_center.id_wc [delete: No Action]

Ref: concession_assign.id_batch > batch.id_batch [delete: No Action]

Ref: concession_assign.id_concession > concession_enum.id_concession [delete: No Action]

Ref: concession_assign.id_user > user_user.id_user [delete: No Action]

Ref: custom_field.id_wc > work_center.id_wc [delete: No Action]

Ref: custom_field_instance.id_field > custom_field.id_field [delete: No Action]

Ref: custom_field_instance.id_order > work_order.id_order [delete: No Action]

Ref: device.id_wc > work_center.id_wc [delete: No Action]

Ref: entry_assign.id_entry > entry_enum.id_entry [delete: No Action]

Ref: entry_assign.id_wc > work_center.id_wc [delete: No Action]

Ref: entry_instance.id_entry_assign > entry_assign.id_entry_assign [delete: No Action]

Ref: entry_instance.id_user > user_user.id_user [delete: No Action]

Ref: entry_instance.id_wc_stay > work_center_stay.id_wc_stay [delete: No Action]

Ref: operation.id_wc > work_center.id_wc [delete: No Action]

Ref: operation.id_order > work_order.id_order [delete: No Action]

Ref: permission_assign.id_permission > user_permission.id_permission [delete: No Action]

Ref: permission_assign.id_role > user_role.id_role [delete: No Action]

Ref: role_assign.id_role > user_role.id_role [delete: No Action]

Ref: role_assign.id_user > user_user.id_user [delete: No Action]

Ref: time_tracker.id_user > user_user.id_user [delete: No Action]

Ref: time_tracker.id_wc_stay > work_center_stay.id_wc_stay [delete: No Action]

Ref: work_center_stay.id_batch > batch.id_batch [delete: No Action]

Ref: work_center_stay.id_wc > work_center.id_wc [delete: No Action]

Ref: work_center_stay.id_user > user_user.id_user [delete: No Action]